# fastapi-boilerplate

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  logger.conf  mypy.ini  prom-up.yml  prom.yml  pyproject.toml  seed .example.json  seed.j2
boilerplate/: main.py
boilerplate/controllers/: role.py  user.py
boilerplate/models/: user.py  users_tokens.py
boilerplate/schemas/: message.py  role.py  token.py  user.py
boilerplate/utils/: db.py  jwt.py  seed.py
migrations/: env.py
migrations/versions/: 5944dea42f64_rename_keys_and_add_roles_table.py  834b941a4c29_init_migration.py  9bff0e1c3bae_add_users_table.py  d9a1d6366162_add_users_table.py  dd39716537b8_init.py  eefa7662ea97_init.py
wd_rmis/: db.py  log_conf.py  main.py  routers.py
wd_rmis/controllers/: user.py
wd_rmis/models/: role.py  user.py
wd_rmis/schemas/: role.py  token.py  user.py
wd_rmis/utils/: db.py  jwt.py  seed.py
