[tool.poetry]
name = "wd-rmis"
version = "0.1.0"
description = ""
authors = ["Иванов Владислав Сергеевич <ivanov_vs@rubin.local>"]
readme = "README.md"
packages = [{include = "wd_rmis"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.90.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.3"
ormar = "^0.12.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
