[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = ["Иванов Владислав Сергеевич <ivanov_vs@rubin.local>"]
readme = "README.md"
packages = [{include = "boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.3"
ormar = "^0.12.1"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
authlib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
